--- a/src/styles/Excel/toolbar.scss
+++ b/src/styles/Excel/toolbar.scss
@@ -1,9 +1,9 @@
-@import './variables';
-@import './mixins';
+@import '../variables';
+@import '../mixins';
 
 .excel-toolbar {
   position: fixed;
-  z-index: 105;
+  z-index: 100;
   display: flex;
   align-items: center;
   width: 100%;
